// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet parses an highlighted snippet attribute of hit object 1`] = `
<span
  className=""
>
  <span
    className="nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="highlighted"
  >
    hi
  </em>
  <span
    className="nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="highlighted"
  >
    hi
  </em>
  <span
    className="nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Snippet renders a hit with a custom tag correctly 1`] = `
<span
  className=""
>
  <span
    className="nonHighlighted"
  >
    awesome 
  </span>
  <strong
    className="highlighted"
  >
    hi
  </strong>
  <span
    className="nonHighlighted"
  >
    ghlighted 
  </span>
  <strong
    className="highlighted"
  >
    hi
  </strong>
  <span
    className="nonHighlighted"
  >
    t!
  </span>
</span>
`;
